# py-maskopy

./: .gitignore  README.md  docker-compose.yml  mask_data.py  pyproject.toml  requirements.txt  reset_data.py
config/: docker-compose.yml  setup.py
db/: init.sql  login.sql
db/data/: customers.csv  payments.csv
docs/: MASKOPY_CAPABILITIES.md  README.md
maskopy/: __init__.py  masking.py
scripts/: mask_data.py  reset_data.py
